--- a/app/assets/stylesheets/css/style_rtl.css
+++ b/app/assets/stylesheets/css/style_rtl.css
@@ -216,8 +216,8 @@ h6 {
 }
 
 #intro .intro-info .btn-get-started {
-  background: #007bff;
-  border: 2px solid #007bff;
+  background: #00428a;
+  border: 2px solid #fff;
   color: #fff;
 }
 
@@ -232,8 +232,8 @@ h6 {
 }
 
 #intro .intro-info .btn-services:hover {
-  background: #007bff;
-  border-color: #007bff;
+  background: #00428a;
+  border-color: #fff;
   color: #fff;
 }
 
@@ -319,7 +319,7 @@ h6 {
 .main-nav .drop-down > a:after {
   content: "\f107";
   font-family: FontAwesome;
-  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .main-nav .drop-down .drop-down ul {
@@ -1189,7 +1189,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #footer {
-  background: #00428a;
+  background: #00366f;
   padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
@@ -1197,7 +1197,7 @@ h6 {
 }
 
 #footer .footer-top {
-  background: #00366f;
+  background: #00428a;
   padding: 60px 0 30px 0;
 }
 
